Fixed failing tests and updated documentation to reflect multiple urls returned from FeedDetector#fetch_feed_urls

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Basically it returns all the feeds that it find not just one...
 
 Usage:
 
-FeedDetector.fetch_feed_url('http://www.rubycorner.com')
+FeedDetector.fetch_feed_urls('http://www.rubycorner.com')
 
 returns:
 
